Atualização da aula

--- a/aulas/79 DA PT JUN-2022 Algoritmos Não-Supervisionados I.ipynb
+++ b/aulas/79 DA PT JUN-2022 Algoritmos Não-Supervisionados I.ipynb
@@ -263,7 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Primeira Iteração"
+    "### Primeira Iteração - Inicialização dos Centróides"
    ]
   },
   {
@@ -284,273 +284,164 @@
    },
    "outputs": [],
    "source": [
-    "X1_guess = np.random.uniform(min(tb_blob['X1']), max(tb_blob['X1']), size = 4)\n",
-    "X2_guess = np.random.uniform(min(tb_blob['X2']), max(tb_blob['X2']), size = 4)\n",
-    "centroids_guess = pd.DataFrame({'X1' : X1_guess, 'X2' : X2_guess})\n",
-    "centroids_guess['iteracao']  = 'IT_0'\n",
-    "centroids_guess"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-03-22T22:57:38.323550Z",
-     "start_time": "2022-03-22T22:57:38.145407Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(8,8))\n",
-    "sns.scatterplot(data = tb_blob, x = 'X1', y = 'X2', s = 100);\n",
-    "sns.scatterplot(data = centroids_guess, x = 'X1', y = 'X2', s = 100);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Usaremos o parâmetro `init=` para especificar que o algoritmo deve iniciar nos nossos centróides."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-03-22T22:57:42.321797Z",
-     "start_time": "2022-03-22T22:57:42.297863Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "clu2_fit = KMeans(n_clusters=4, max_iter=1, init=centroids_guess[['X1', 'X2']], n_init=1)\n",
-    "clu2_fit.fit(tb_blob[['X1', 'X2']]);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-03-22T22:57:42.863537Z",
-     "start_time": "2022-03-22T22:57:42.809709Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "tb_blob['pred_cluster'] = clu2_fit.predict(tb_blob[['X1', 'X2']])\n",
-    "tb_blob['pred_cluster'] = tb_blob['pred_cluster'].astype(str)\n",
-    "centroids_1it = pd.DataFrame(clu2_fit.cluster_centers_)\n",
-    "centroids_1it.columns = ['X1', 'X2']\n",
-    "centroids_1it['iteracao']  = 'IT_1'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "O algoritmo coloca cada ponto do nosso dataset em um cluster, selecionando o cluster cujo centroide esta mais próximo do ponto.  A partir desta classificação, estimamos novos centróides calculando a média de cada cluster."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-03-22T22:57:45.289344Z",
-     "start_time": "2022-03-22T22:57:44.931291Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(8,8))\n",
-    "sns.scatterplot(data = tb_blob, x = 'X1', y = 'X2', hue = 'pred_cluster', s = 100);\n",
-    "sns.scatterplot(data = centroids_1it, x = 'X1', y = 'X2', color = 'black', s = 250);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Segunda Iteração"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As iterações subsequentes do KMeans são identicas: primeiro reclassificamos os pontos de acordo com os novos centróides e então recalculamos um novo vetor de centróides a partir das médias de cada cluster."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-03-22T22:59:14.660379Z",
-     "start_time": "2022-03-22T22:59:14.577032Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "clu3_fit = KMeans(n_clusters=4, max_iter=1, init=centroids_1it[['X1', 'X2']], n_init=1)\n",
-    "clu3_fit.fit(tb_blob[['X1', 'X2']])\n",
-    "tb_blob['pred_cluster'] = clu3_fit.predict(tb_blob[['X1', 'X2']])\n",
-    "tb_blob['pred_cluster'] = tb_blob['pred_cluster'].astype(str)\n",
-    "centroids_2it = pd.DataFrame(clu3_fit.cluster_centers_)\n",
-    "centroids_2it.columns = ['X1', 'X2']\n",
-    "centroids_2it['iteracao']  = 'IT_2'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-03-22T22:59:15.449679Z",
-     "start_time": "2022-03-22T22:59:15.144892Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(8,8))\n",
-    "sns.scatterplot(data = tb_blob, x = 'X1', y = 'X2', hue = 'pred_cluster', s = 100);\n",
-    "sns.scatterplot(data = centroids_2it, x = 'X1', y = 'X2', color = 'black', s = 250);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Terceira Iteração"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-03-22T22:59:28.482993Z",
-     "start_time": "2022-03-22T22:59:28.407194Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "clu4_fit = KMeans(n_clusters=4, max_iter=1, init=centroids_2it[['X1', 'X2']], n_init=1)\n",
-    "clu4_fit.fit(X)\n",
-    "tb_blob['pred_cluster'] = clu4_fit.predict(tb_blob[['X1', 'X2']])\n",
-    "tb_blob['pred_cluster'] = tb_blob['pred_cluster'].astype(str)\n",
-    "centroids_3it = pd.DataFrame(clu4_fit.cluster_centers_)\n",
-    "centroids_3it.columns = ['X1', 'X2']\n",
-    "centroids_3it['iteracao']  = 'IT_3'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-03-22T23:00:02.656544Z",
-     "start_time": "2022-03-22T23:00:02.356349Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(8,8))\n",
-    "sns.scatterplot(data = tb_blob, x = 'X1', y = 'X2', hue = 'pred_cluster', s = 100);\n",
-    "sns.scatterplot(data = centroids_3it, x = 'X1', y = 'X2', color = 'black', s = 250);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 10 Steps at Once"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-03-22T23:06:11.807904Z",
-     "start_time": "2022-03-22T23:06:09.234762Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "fig, axes = plt.subplots(3,3, figsize=(14,8))\n",
+    "p1 = (np.quantile(tb_blob[\"X1\"], 0.25), np.quantile(tb_blob[\"X2\"], 0.25))\n",
+    "p2 = (np.quantile(tb_blob[\"X1\"], 0.25), np.quantile(tb_blob[\"X2\"], 0.75))\n",
+    "p3 = (np.quantile(tb_blob[\"X1\"], 0.75), np.quantile(tb_blob[\"X2\"], 0.25))\n",
+    "p4 = (np.quantile(tb_blob[\"X1\"], 0.75), np.quantile(tb_blob[\"X2\"], 0.75))\n",
     "\n",
-    "X1_guess = np.random.uniform(min(tb_blob['X1']), max(tb_blob['X1']), size = 4)\n",
-    "X2_guess = np.random.uniform(min(tb_blob['X2']), max(tb_blob['X2']), size = 4)\n",
-    "centroids = pd.DataFrame({'X1' : X1_guess, 'X2' : X2_guess})\n",
-    "\n",
-    "for i in range(3):\n",
-    "    for j in range(3):\n",
-    "    \n",
-    "        n_iterations = i + j + 1\n",
-    "        \n",
-    "\n",
-    "        clu_fit = KMeans(4, max_iter=1, init=centroids, n_init=1)\n",
-    "        clu_fit.fit(tb_blob[['X1', 'X2']])\n",
-    "        tb_blob['pred_cluster'] = clu_fit.labels_\n",
-    "        tb_blob['pred_cluster'] = tb_blob['pred_cluster'].astype(str)\n",
-    "        \n",
-    "        centroids = pd.DataFrame(clu_fit.cluster_centers_)\n",
-    "        centroids.columns = ['X1', 'X2']\n",
-    "        \n",
-    "        sns.scatterplot(data = tb_blob, x = 'X1', y = 'X2', hue = 'pred_cluster', ax = axes[i,j])\n",
-    "        sns.scatterplot(data = centroids, x = 'X1', y = 'X2', color = 'black', ax = axes[i,j])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Problemas do KMeans"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Convergência"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Temos duas ferramentas para garantir a convergência do algoritmo KMeans:\n",
-    "* Melhorar a seleção dos centroides iniciais\n",
-    "* Processar mais que um conjunto de centroides e selecionar o melhor conjunto\n",
-    "\n",
-    "A execução 'padrão' da biblioteca SKLEARN implementa as duas estratégias automaticamente através dos parâmetros `init = 'k-means++'`, utilizando o algoritmo k-means++ para seleção inicial de centroides, e `n_init = 10`, processando 10 conjuntos de centroides diferentes e escolhendo o com clusters mais estáveis."
+    "tb_centroids = pd.DataFrame(\n",
+    "    [p1, p2, p3, p4], columns=[\"X1\", \"X2\"], index=[\"p1\", \"p2\", \"p3\", \"p4\"]\n",
+    ")\n",
+    "tb_centroids"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-03-22T23:09:53.332584Z",
-     "start_time": "2022-03-22T23:09:52.723348Z"
-    },
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "clu_fit = KMeans(n_clusters = 10, init = 'k-means++', n_init = 10)\n",
-    "clu_fit.fit(tb_blob[['X1', 'X2']])\n",
-    "tb_blob['pred_cluster'] = clu_fit.predict(tb_blob[['X1', 'X2']])\n",
-    "tb_blob['pred_cluster'] = tb_blob['pred_cluster'].astype(str)\n",
-    "centroids = pd.DataFrame(clu_fit.cluster_centers_)\n",
-    "centroids.columns = ['X1', 'X2']\n",
-    "plt.figure(figsize=(8,8))\n",
-    "sns.scatterplot(data = tb_blob, x = 'X1', y = 'X2', hue = 'pred_cluster', s = 100);\n",
-    "sns.scatterplot(data = centroids, x = 'X1', y = 'X2', color = 'black', s = 250);"
+    "sns.scatterplot(data=tb_blob, x=\"X1\", y=\"X2\")\n",
+    "sns.scatterplot(data=tb_centroids, x=\"X1\", y=\"X2\", color=\"black\", s=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Primeira Iteração - Calculando Membros de Clusters\n",
+    "Agora, vamos atualizar a posição dos nossos centróides:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for centroid in tb_centroids.iterrows():\n",
+    "    centroid_name = centroid[0]\n",
+    "    centroid_x1 = centroid[1][\"X1\"]\n",
+    "    centroid_x2 = centroid[1][\"X2\"]\n",
+    "    tb_blob[centroid_name] = (tb_blob[\"X1\"] - centroid_x1) ** 2 + (tb_blob[\"X2\"] - centroid_x2) ** 2\n",
+    "\n",
+    "tb_blob.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tb_blob[\"cluster\"] = tb_blob[[\"p1\", \"p2\", \"p3\", \"p4\"]].idxmin(1)\n",
+    "tb_blob.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.scatterplot(data=tb_blob, x=\"X1\", y=\"X2\", hue=\"cluster\")\n",
+    "sns.scatterplot(data=tb_centroids, x=\"X1\", y=\"X2\", color=\"black\", s=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Primeira Atualização - Recalculando Centróides\n",
+    "\n",
+    "Agora, vamos utilizar os pontos de cada cluster estimados na etapa anterior para atualizar a posição de meus centróides:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tb_centroids = tb_blob.groupby(\"cluster\")[[\"X1\", \"X2\"]].mean()\n",
+    "tb_centroids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.scatterplot(data=tb_blob, x=\"X1\", y=\"X2\", hue=\"cluster\")\n",
+    "sns.scatterplot(data=tb_centroids, x=\"X1\", y=\"X2\", color=\"black\", s=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Segunda Iteração - Calculando Membros de Clusters\n",
+    "\n",
+    "A segunda iteração (e todas as subsequentes) repetem as duas últimas etapas da primeira iteração: primeiro atualizamos os membros de nossos clusters de acordo com os centróides calculados na última etapa..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for centroid in tb_centroids.iterrows():\n",
+    "    centroid_name = centroid[0]\n",
+    "    centroid_x1 = centroid[1][\"X1\"]\n",
+    "    centroid_x2 = centroid[1][\"X2\"]\n",
+    "    tb_blob[centroid_name] = (tb_blob[\"X1\"] - centroid_x1) ** 2 + (\n",
+    "        tb_blob[\"X2\"] - centroid_x2\n",
+    "    ) ** 2\n",
+    "tb_blob[\"cluster\"] = tb_blob[[\"p1\", \"p2\", \"p3\", \"p4\"]].idxmin(1)\n",
+    "tb_blob.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.scatterplot(data=tb_blob, x=\"X1\", y=\"X2\", hue=\"cluster\")\n",
+    "sns.scatterplot(data=tb_centroids, x=\"X1\", y=\"X2\", color=\"black\", s=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Segunda Atualização - Recalculando Centróides\n",
+    "\n",
+    "...depois recalculamos os centróides a partir dos membros de cada cluster."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tb_centroids = tb_blob.groupby(\"cluster\")[[\"X1\", \"X2\"]].mean()\n",
+    "sns.scatterplot(data=tb_blob, x=\"X1\", y=\"X2\", hue=\"cluster\")\n",
+    "sns.scatterplot(data=tb_centroids, x=\"X1\", y=\"X2\", color=\"black\", s=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problemas do KMeans\n",
+    "\n",
+    "Apesar de sua simplicidade e efetividade, o algoritmo k-Means apresenta um grande problema: como determinamos **k**? Se nossos espaço de features tem 2 dimensões, podemos fazer um gráfico, como fizemos até agora. A maior parte dos problemas reais apresenta mais dimensões: nesses casos utilizaremos algumas ferramentas para auxiliar nessa determinação.\n",
+    "\n",
+    "Começaremos vendo as medidas de inérica e silhueta - que podemos utilizar para 'otimizar' o número de clusters."
    ]
   },
   {
@@ -1201,7 +1092,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit",
+   "display_name": "Python 3.9.11 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1215,7 +1106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.11"
   },
   "toc": {
    "base_numbering": 1,
@@ -1261,7 +1152,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "014f4a4a5af8f0104b12c029e500f4146d6d785e8cf714d2a35b7a9514230cd3"
    }
   }
  },
