Otimização de Hiperparâmetros

--- a/aulas/Projeto Python Game.ipynb
+++ b/aulas/Projeto Python Game.ipynb
@@ -162,8 +162,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1974269b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "str_model = '''1300 CHERRY ST\n",
+    "KANSAS CITY, MO 64106\n",
+    "(39.098312716000464, -94.5763166219997)'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bfc23f81",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "39.098312716000464"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern = r'\\([0-9]+.[0-9]+,'\n",
+    "float(re.findall(pattern, str_model)[0].replace('(', '').replace(',', ''))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdba71fd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -172,7 +207,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.11 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -200,6 +235,11 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": true
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "014f4a4a5af8f0104b12c029e500f4146d6d785e8cf714d2a35b7a9514230cd3"
+   }
   }
  },
  "nbformat": 4,
