--- a/aulas/79 DA PT JUN-2022 Séries Temporais.ipynb
+++ b/aulas/79 DA PT JUN-2022 Séries Temporais.ipynb
@@ -4607,7 +4607,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -4621,7 +4621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.11"
+   "version": "3.9.6"
   },
   "toc": {
    "base_numbering": 1,
@@ -4638,7 +4638,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "014f4a4a5af8f0104b12c029e500f4146d6d785e8cf714d2a35b7a9514230cd3"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
